css/styles.css
@import url('https://fonts.googleapis.com/css2?family=Otomanopee+One&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Noto+Sans&family=Otomanopee+One&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400;900&display=swap');

.border {
  border: 1px solid black;
}

.headings {
  color: #2C4D6E;
  font-family: 'Otomanopee One', sans-serif;
}

.grey {
  color: grey;
}

.flex {
  display: flex;
}

.grid {
  display: grid;
}

body {
  background-color: #f5f4ea;
  font-family: 'Lato', sans-serif;
  overflow-x: hidden;
}

h1 {
  line-height: 2.5rem;

}

h2 {
  font-size: 1.1rem;

}

nav {
  display: flex;
  justify-content: space-between;
  align-items: center;
  height: 50px;
  padding-left: 30px;
  padding-right: 30px;
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  background-color: #f5f4ea;
  z-index: 2;
  box-shadow:0 1px 5px #e9e8dc;

}

.logo {
  width: 3.5rem;
  padding: 5px 0;
  height: 94%;
}

.logo img {
  height: 90%;
  width: 90%;
}

.nav-links {
  display: flex;
  list-style: none;
 
}

.nav-links li {
  margin: 6px;

}

.nav-links a {
  text-decoration: none;
  color: #32501d;

}

.head-union {
  justify-content: space-between;
  margin-top: 50px;
  height: calc(100vh - 50px)
}

.header-text {
  /* border: 1px solid black; */
  margin: 20px;
  width: 100%;
  font-size: 1.2rem;
  line-height: 1.8rem;
}

.intxt {
  text-decoration: none;
  color: #2C4D6E;
  font-weight: bold;
}

.header-img {
  display: none;
}

.header-footer {
  position: absolute;
  bottom: 35px;
  width: 90%;
}

.header-footer-txt p {
  color: #2C4D6E;
  font-size: 1.1rem;

}
.header-footer-icons {
  display: flex;
  list-style-type: none;
}

.header-footer-icons li{
  width: 25px;
  margin: 0 10px;
}

.header-footer-icons li img {
  width: 100%;
}

#portfolio {
  padding: 1.7rem;
  padding-top: 2.3rem;
}

.portfolio-grid {
  display: grid;
  grid-template-columns: 1fr;
  grid-gap: 20px;
}

.portfolio-item {
  height: 27vh;
  position: relative;
  color: #fff;
}

#pot1{ background:
  linear-gradient(to bottom, rgba(0,0,0, 1), rgba(107,162,68, 0.6)), 
  url('https://source.unsplash.com/2xaF4TbjXT0');
  background-position: top;
background-size: cover;
}

#pot2 {
background:
linear-gradient(to bottom, rgba(44, 77, 110, 0.3), rgba(107,162,68, 0.6)), 
url('/img/pete\'s\ kitchen.PNG');
background-position: center;
background-size: cover;

}

#pot3 {
  background:
  linear-gradient(to bottom, rgba(0,0,0, 0.8), rgba(107,162,68, 0.6)), 
  url(/img/chatflx.png);
  background-position: center;
background-size: cover;
}

#pot4 {
  background: linear-gradient(to bottom, rgba(0,0,0, 0.5), rgba(107,162,68, 0.6)), 
  url('https://source.unsplash.com/f-PH16nZHKI');
  background-position: center;
background-size: cover;
}

.portfolio-item h3 {
  margin: 0;
  padding: 5px 0 5px; 
  font-size: 1.4rem;
  margin-bottom: 10px;
}

.proj-tech {
  display: flex;
  flex-wrap: wrap;
  margin: 0;
  padding: 10px;
}

.proj-tech p {
  background-color: rgb(53, 48, 48);
  font-size: 0.87rem;
  padding: 3px;
  font-family:sans-serif;
  margin: 2px;
}

.proj-btns {
  position: absolute;
  bottom: 20px;
  left: 10px;
  font-size: 0.8rem;
}

.proj-btns a {
  padding: 7px 10px;
  text-decoration: none;
  color: #fff;
  margin-left: 15px;
  font-size: 1rem;
}
.live-btn {
  background-color: rgba(107,162,68, 0.8);

}

.code-btn {
  background-color: rgba(44,77,110, 0.8);

}

#about {
  display: grid;
  padding-top: 20px;
  padding-bottom: 20px;
  font-size: 1rem;
}

.about-btn {
  padding: 10px;
  background-color: #013220; 
  text-decoration: none;
  color: #fff;
  margin-top: 30px;
}

.about-me, .about-skills {
  padding: 30px;
}

.about-skills p:first-child {
  font-weight: bold;
  color: #013220; 

}

#contact-form {
  background-color: #2C4D6E;
  color: #fff;
  margin: auto;
  padding: 2.5rem 10px;
}

#contact-form h2 {
  color: #fff;
  text-align: center;
}

#contact-form p {
  text-align: center;
}

.form {
  max-width: 400px;
  width: 90%;
  margin: 0 auto;
  background: none;
}

fieldset {
  margin: 0 0 10px;
  width: 100%;
  border: none;
}
input {
  width: 90%;
  height: 1rem;
  padding: 10px;
}

textarea {
  font-family: 'Lato', sans-serif;
}

#contact-submit {
  width: 94%;
  height: 2.5rem;
  font-size: 1rem;
  background-color:#6BA244;
  color: #fff;
  border: none;
  margin: auto;
  margin-bottom: 2rem;
}

textarea {
  width: 90%;
  height: 5rem;
  border: none;
  background: #fff;
  padding: 8px;
  font-family: 'Lato', sans-serif;
}

.footer-icons {
  width: 100%;
  justify-content: space-between;
  padding-left: 0;
}


@media screen and (min-width: 768px) {
 

  /* .header-text {
    width: 50%;
  } */

  .nav-links {
    width: 30%;
    justify-content: space-around;
  }

  .header-text {
    /* border: 1px solid black; */
    margin: 40px;
    margin-top: 80px;
    width: 50%;
    position: relative;
  }
  .header-img {
    width: 50%;
    display: block;
  }
  .header-img img {
    width: 100%;
    height: 100%;
  }

  .header-footer {
    display: flex;
    bottom: 0px;
  }

  .portfolio-grid {
    grid-template-columns: 1fr 1fr 1fr;
  }

  .portfolio-item {
    height: 35vh;
    padding: 10px 0 20px 10px;
  }

  #about {
    grid-template-columns: 1fr 1fr;
  }

  .about-me div {
    margin-top: 80px;
  }

}

